k8s/security/allow-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana-ingress
  namespace: twisterlab
spec:
  podSelector:
    matchLabels:
      app: twisterlab
      component: monitoring
      service: grafana
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
  policyTypes:
  - Ingress
